# advent-of-code

./: .gitignore
2021/day1/go/: main.go
2021/day2/: main.go
2021/day2/go/: main.go
2021/day3/: main.go
2021/day4/: main.go
2021/day5/: main.go
2021/day6/: main.go
2021/day7/: main.go
2022/day1/src/: main.rs
2022/day10/src/: main.rs
2022/day11/src/: main.rs
2022/day12/src/: main.rs
2022/day13/src/: main.rs
2022/day14/src/: main.rs
2022/day15/src/: main.rs
2022/day16/src/: main.rs
2022/day17/src/: main.rs
2022/day18/src/: main.rs
2022/day19/src/: main.rs
2022/day23/: Cargo.toml
2023/day1/: main.py
2023/day10/: main.py
2023/day11/: main.py
2023/day13/: main.py
2023/day14/: main.py
2023/day15/: main.py
2023/day16/: main.py
2023/day17/: main.py
2023/day18/: main.py  output.txt
2023/day19/: main.py
2023/day2/: main.py
2023/day20/: main.py
2023/day21/: main.py
2023/day22/: main.py
2023/day23/: main.py
2023/day24/: main.py
2023/day25/: main.py  pyproject.toml
2023/day3/: main.py
2023/day4/: main.py
2023/day5/: main.py
2023/day6/: main.py
2023/day7/: main.py
2023/day8/: main.py
2023/day9/: main.py
2024/: pyproject.toml
2024/day1/: solve.py
2024/day10/: solve.py
2024/day11/: solve.py
2024/day12/: solve.py
2024/day13/: solve.py
2024/day14/: solve.py
2024/day15/: solve.py
2024/day19/: solve.py
2024/day2/: solve.py
2024/day3/: solve.py
2024/day4/: solve.py
2024/day5/: solve.py
2024/day6/: solve.py
2024/day7/: solve.py
2024/day8/: solve.py
2024/day9/: solve.py
(+14 files in other folders)
